--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
   <p class="su">Ganesh Chartuthi</p>
   <p class="vi">TIme:-7:00am Onwards</p>
   <p class="vi">Followed By Dinner</p>
-  <p class="vi">At 10000 Coders,Near KPHB Metro </p>
-  <p class="vi">KPHB COlony Road Number:1</p>
+  <p class="vi">Bhainsa </p>
+ 
 
 
-  <p class="si"><b>HYDERABAD</b></p>
+  <p class="si"><b>Bhainsa</b></p>
 </fieldset>
 
 </footer>
